cherry-picked 8baee2fb5b6cbda71a8543bd0cda2a2a9ad97a12

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,7 +8,7 @@ stdout_events_enabled=true
 stderr_events_enabled=true
 
 [program:uwsgi]
-directory=/srv/django/app
-command = /usr/local/bin/uwsgi --ini /opt/uwsgi/uwsgi.ini --touch-reload /opt/django/reload
+directory=/srv/python/app
+command = /usr/local/bin/uwsgi --ini /opt/uwsgi/uwsgi.ini
 stdout_logfile=/var/log/server.log
 stderr_logfile=/var/log/server_error.log
