cherry-pick from apache d1820d702ce9f69e4b736481959d10d812b4587a

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,6 +9,6 @@ stderr_events_enabled=true
 
 [program:uwsgi]
 directory=/srv/python/app
-command = /usr/local/bin/uwsgi --ini /opt/uwsgi/uwsgi.ini
+command = /opt/pyenv/shims/uwsgi --ini /opt/uwsgi/uwsgi.ini
 stdout_logfile=/var/log/server.log
 stderr_logfile=/var/log/server_error.log
